--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"start": "wp-scripts start",
-		"packages-update": "wp-scripts packages-update"
+		"packages-update": "wp-scripts packages-update",
+		"make-pot": "wp i18n make-pot . languages/kotisivu-theme-blocks.pot --slug=kotisivu-theme-blocks --domain=kotisivu-theme-blocks --exclude=node_modules,src/blocks/static,src/blocks/dynamic/*/*.js,src/components,src/utilities",
+		"make-json": "wp i18n make-json languages/ --no-purge"
 	},
 	"dependencies": {
 		"@wordpress/block-editor": "^7.0.2",
